--- a/index.html
+++ b/index.html
@@ -95,90 +95,150 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/01.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/01.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    성유민
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    50일
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/02.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/02.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    성유민
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    100일
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/03.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/03.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    성유민
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    100일
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/04.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/04.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    성유민
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    100일
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/05.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/05.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    성유민
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    200일
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/06.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/06.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    성유민
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    1년
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/07.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/07.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민
+                                </div>
+                                <div class="project-name">
+                                    1년
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/08.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/08.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민
+                                </div>
+                                <div class="project-name">
+                                    1년
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/09.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/09.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민
+                                </div>
+                                <div class="project-name">
+                                    1년
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/10.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/10.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민 가족
+                                </div>
+                                <div class="project-name">
+                                    1년
                                 </div>
                             </div>
                         </div>
