--- a/index.html
+++ b/index.html
@@ -273,26 +273,28 @@
                     <div id="map" style="width:100%;height:400px;"></div>
 
                     <script>
-                        var HOME_PATH = window.HOME_PATH || '.';
-                        var position = new naver.maps.LatLng(37.3849483, 127.1229117);
+                        (function() {
+                            var HOME_PATH = window.HOME_PATH || '.';
+                            var position = new naver.maps.LatLng(37.3849483, 127.1229117);
 
-                        var map = new naver.maps.Map('map', {
-                            center: position,
-                            zoom: 14
-                        });
+                            var map = new naver.maps.Map('map', {
+                                center: position,
+                                zoom: 14
+                            });
 
-                        var markerOptions = {
-                            position: position.destinationPoint(90, 15),
-                            map: map,
-                            icon: {
-                                url: HOME_PATH +'/img/yumin_fav.jpg',
-                                size: new naver.maps.Size(50, 52),
-                                origin: new naver.maps.Point(0, 0),
-                                anchor: new naver.maps.Point(25, 26)
-                            }
-                        };
+                            var markerOptions = {
+                                position: position.destinationPoint(90, 15),
+                                map: map,
+                                icon: {
+                                    url: HOME_PATH +'/img/yumin_fav.jpg',
+                                    size: new naver.maps.Size(50, 52),
+                                    origin: new naver.maps.Point(0, 0),
+                                    anchor: new naver.maps.Point(25, 26)
+                                }
+                            };
 
-                        var marker = new naver.maps.Marker(markerOptions);
+                            var marker = new naver.maps.Marker(markerOptions);
+                        })();
                     </script>
 
                 </div>
