--- a/index.html
+++ b/index.html
@@ -290,25 +290,41 @@
             <script>
                 (function() {
                     var HOME_PATH = window.HOME_PATH || '.';
-                    var position = new naver.maps.LatLng(37.3849483, 127.1229117);
 
-                    var map = new naver.maps.Map('map', {
-                        center: position,
-                        zoom: 14
+                    var cityhall = new naver.maps.LatLng(37.3946344, 126.638529),
+                        map = new naver.maps.Map('map', {
+                            center: cityhall.destinationPoint(0, 500),
+                            zoom: 10
+                        }),
+                        marker = new naver.maps.Marker({
+                            map: map,
+                            position: cityhall
+                        });
+
+                    var contentString = [
+                        '<div class="iw_inner">',
+                        '   <h3>파티파라나</h3>',
+                        '   <p>인천 연수구 센트럴로 194 | 송도동 23-4 센트럴파크II B동 3F 더샵센트럴파크2<br />',
+                        '       <img src="'+ HOME_PATH +'/img/yumin.png" class="thumb" /><br />',
+                        '       032-832-2020<br />',
+                        '       <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
+                        '   </p>',
+                        '</div>'
+                    ].join('');
+
+                    var infowindow = new naver.maps.InfoWindow({
+                        content: contentString
                     });
 
-                    var markerOptions = {
-                        position: position.destinationPoint(90, 15),
-                        map: map,
-                        icon: {
-                            url: HOME_PATH +'/img/yumin.png',
-                            size: new naver.maps.Size(50, 52),
-                            origin: new naver.maps.Point(0, 0),
-                            anchor: new naver.maps.Point(25, 26)
+                    naver.maps.Event.addListener(marker, "click", function(e) {
+                        if (infowindow.getMap()) {
+                            infowindow.close();
+                        } else {
+                            infowindow.open(map, marker);
                         }
-                    };
+                    });
 
-                    var marker = new naver.maps.Marker(markerOptions);
+                    infowindow.open(map, marker);
                 })();
             </script>
         </div>
