--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@
             </div>
         </div>
         <div class="container">
-            <div id="map" style="width:100%;height:400px;"></div>
+            <div class="row">
+                <div id="map" style="width:100%;height:400px;"></div>
+            </div>
 
             <script>
                 (function() {
