--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yumin's 1st Birthday party!</title>
+    <title>Yumin's 1st Birthday Party!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Yumin's 1st Birthday Party!</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Yumin's 1st Birthday!</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -321,12 +321,11 @@
                             map: map,
                             position: cityhall
                         });
-
+//   '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
                     var contentString = [
                         '<div class="iw_inner">',
                         '   <h3>파티파라나</h3>',
                         '   <p>인천 연수구 센트럴로 194<br /> 송도동 23-4 더샵센트럴파크2 B동 3F<br />',
-                        '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
                         '       032-832-2020<br />',
                         '       <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
                         '   </p>',
