--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
             <div class="header-content-inner">
                 <!--<hr>-->
                 <br/><br/><br/><br/><br/><br/><br/>
-                <p>유민이의 첫 생일을 축하해주세요. <br />장소 : 파티파라나 </p>
+                <p>
+                    <span style="background-color: #000000">유민이의 첫 생일을 축하해주세요</span> <br />
+                    <span style="background-color: #000000">2017년 7월 22일(토) 저녁 6시 30분</span> <br/>
+                    <span style="background-color: #000000">송도 파티파라나 A홀</span>
+                </p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
             </div>
         </div>
