--- a/index.html
+++ b/index.html
@@ -125,6 +125,19 @@
         </div>
     </header>
 
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">We've got what you need!</h2>
+                    <hr class="light">
+                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="" id="about">
         <div class="container">
             <div class="row">
@@ -292,20 +305,11 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>유민이의 다른 사진도 많이 있답니다.</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">사진 더 보기!</a>
-            </div>
-        </div>
-    </aside>
-
     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">오시는 길</h2>
+                    <h2 class="section-heading">자차 이용 시</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -361,12 +365,43 @@
                     <img src="img/parking.png" style="width:100%">
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">지하철 이용 시</h2>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">대중교통 이용 시</h2>
                     <hr class="primary">
-                    <p>센트럴파크역 3번출구 하차 후 도보 10분 거리<br />(공원 산책로를 따라 걸어오세요)</p>
-                    <p>행사 시작 30분 전부터 행사 시작 후 1시간까지 셔틀버스 운행 <br /> (센트럴파크역 3번 출구에서 탑승 가능)</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <h3>지하철</h3>
+                        <p class="text-muted">센트럴파크역 3번출구 도보 10분 거리</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <h3>셔틀 운행</h3>
+                        <p class="text-muted">행사 시작 30분 전 부터 1시간 후<br />센트럴파크역 3번 출구 탑승</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <h3>버스</h3>
+                        <p class="text-muted">
+                            지선 92번, 급행 908번<br />
+                            좌석 780번, M6724번
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
