--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="image/contents.jpg" class="img-responsive" alt="">
+                    <img src="img/greetings.jpg" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
