--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
     </header>
 
-    <section class="" id="about">
+    <section class="no-padding" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -301,22 +301,14 @@
                     <p class="text-faded">
                         인천 연수구 센트럴로 194 (송도동 23-4) <br/>
                         더 샵 센트럴파크2 B동 3F <br/>
-                        032-832-2020 <br/>
+                        <span style="color: #ffffff">032-832-2020</span><br/>
                         <a href="http://www.partyparana.com/" target="_blank" style="color: #ffffff">http://www.partyparana.com/</a>
                     </p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">자차 이용 시</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
+    <section class="no-padding" id="services">
         <div class="container">
             <div class="row">
                 <div id="map" style="width:100%;height:400px;"></div>
@@ -363,7 +355,7 @@
                 })();
             </script>
 
-            <div class="row" style="width:100%;height:400px;">
+            <div class="row" style="width:100%;">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/parking.png" style="width:100%">
                 </div>
@@ -371,7 +363,8 @@
         </div>
     </section>
 
-    <section>
+    <br>
+    <section class="no-padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -381,33 +374,12 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>지하철</h3>
-                        <p class="text-muted">센트럴파크역 3번출구 도보 10분 거리</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>셔틀 운행</h3>
-                        <p class="text-muted">행사 시작 30분 전 부터 1시간 후<br />센트럴파크역 3번 출구 탑승</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>버스</h3>
-                        <p class="text-muted">
-                            지선 92번, 급행 908번<br />
-                            좌석 780번, M6724번
-                        </p>
-                    </div>
-                </div>
+            <div class="row" style="text-align: center">
+                <p class="text-muted">센트럴파크역 3번출구  <br/>
+                    도보 10분 거리 (공원 산책로를 따라 건너오세요) <br/>
+                    셔틀차량 운행 (행사 시작 30분 전 ~ 1시간 후)
+                </p>
             </div>
-        </div>
     </section>
 
     <section id="contact">
