--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a class="page-scroll" href="#page-top">HOME</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#about">인사말</a>
                     </li>
                     <li>
@@ -168,21 +171,21 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/03.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/03.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    성유민
-                                </div>
-                                <div class="project-name">
-                                    100일
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="img/portfolio/fullsize/03.jpg" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/thumbnails/03.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--성유민-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--100일-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/04.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/04.jpg" class="img-responsive" alt="">
@@ -300,7 +303,12 @@
                     <hr class="light">
                     <p class="text-faded">
                         인천 연수구 센트럴로 194 (송도동 23-4) <br/>
-                        더 샵 센트럴파크2 B동 3F <br/>
+                        더 샵 센트럴파크2 B동 3F <br/><br/>
+
+                        <a href="http://m.tmap.co.kr/tmap2/mobile/route.jsp?name=파티파라나&lon=126.6411801&lat=37.3940855" class="page-scroll btn btn-default btn-xl sr-button">Tmap 길안내</a>
+
+                        <br/><br/>
+
                         <span style="color: #ffffff">032-832-2020</span><br/>
                         <a href="http://www.partyparana.com/" target="_blank" style="color: #ffffff">http://www.partyparana.com/</a>
                     </p>
@@ -308,6 +316,7 @@
             </div>
         </div>
     </section>
+
     <section class="no-padding" id="services">
         <div class="container">
             <div class="row">
@@ -354,12 +363,6 @@
                     infowindow.open(map, marker);
                 })();
             </script>
-
-            <div class="row" style="width:100%;">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/parking.png" style="width:100%">
-                </div>
-            </div>
         </div>
     </section>
 
