--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         인천 연수구 센트럴로 194 (송도동 23-4) <br/>
                         더 샵 센트럴파크2 B동 3F <br/><br/>
 
-                        <a href="http://m.tmap.co.kr/tmap2/mobile/route.jsp?name=파티파라나&lon=126.6411801&lat=37.3940855" class="page-scroll btn btn-default btn-xl sr-button">Tmap 길안내</a>
+                        <a href="http://m.tmap.co.kr/tmap2/mobile/route.jsp?name=파티파라나&lon=126.6411801&lat=37.3940855" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Tmap 길안내</a>
 
                         <br/><br/>
 
