--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yumin's 1st Birthday Party!</title>
+    <title>Yumin's 1st Birthday Party</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Yumin's 1st Birthday!</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Yumin's 1st Birthday</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -171,21 +171,21 @@
                         </div>
                     </a>
                 </div>
-                <!--<div class="col-lg-4 col-sm-6">-->
-                    <!--<a href="img/portfolio/fullsize/03.jpg" class="portfolio-box">-->
-                        <!--<img src="img/portfolio/thumbnails/03.jpg" class="img-responsive" alt="">-->
-                        <!--<div class="portfolio-box-caption">-->
-                            <!--<div class="portfolio-box-caption-content">-->
-                                <!--<div class="project-category text-faded">-->
-                                    <!--성유민-->
-                                <!--</div>-->
-                                <!--<div class="project-name">-->
-                                    <!--100일-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</a>-->
-                <!--</div>-->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/03.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/03.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민
+                                </div>
+                                <div class="project-name">
+                                    100일
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/04.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/04.jpg" class="img-responsive" alt="">
@@ -232,6 +232,21 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/11.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/11.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민
+                                </div>
+                                <div class="project-name">
+                                    1년
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/07.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/07.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -264,6 +279,21 @@
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/09.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/09.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    성유민
+                                </div>
+                                <div class="project-name">
+                                    1년
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/12.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/12.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
