--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <meta property="og:title"			content="성유민의 첫 번째 생일파티에 초대합니다"/>
-    <meta property="og:image"			content="http://yuminsung.github.io/img/greetings.jpg"/>
+    <meta property="og:image"			content="http://yuminsung.github.io/img/header.jpg"/>
     <meta property="og:description"		content="2017/07/22(토) 6:30 PM 인천 파티파라나 A홀"/>
 
     <title>Yumin's 1st Birthday Party</title>
